--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -101,12 +101,11 @@
     @* CDNS for datatable *@
     <script type="text/javascript"src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript"src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
-    
-    <!-- pdfmake -->
+    @* pdfmake *@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.53/build/pdfmake.min.js"></script>
-    <!-- vfs_fonts.js -->
+    @* vfs_fonts.js *@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.53/build/vfs_fonts.js"></script>
-    <!-- jszip -->
+    @* jszip *@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 
     <script type="text/javascript"src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
