added text break in employee card ui

--- a/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/_EmployeeCard.cshtml
@@ -4,7 +4,7 @@
 
 <div class="d-sm-flex p-3 mb-2 shadow-sm border rounded bg-white justify-content-around flex-wrap">
     <div class="col-sm-4 mb-4 mb-lg-0">
-        <h6 class="text-primary fw-bold m-0 text-capitalize">
+        <h6 class="text-primary fw-bold m-0 text-capitalize text-break">
             <i class="bi bi-person-vcard me-1"></i>@employee.FirstName @employee.LastName</h6>
         <p class="text-muted">
             @employee.Designation!.DesignationName</p>
@@ -18,7 +18,7 @@
             <span class="fw-normal">
                 <i class="bi bi-envelope-at me-1"></i>Email Address:</span> 
             <br class="d-none d-sm-block d-lg-none">
-            <span class="fw-bold">@employee.Email</span>
+            <span class="fw-bold text-break">@employee.Email</span>
         </p>
     </div>        
     <div class="col-sm-4 text-center border-start border-end border-info rounded mb-4 mt-4 m-lg-0 pt-2 pb-2">
