--- a/EmployeeSkillManagement/wwwroot/css/Employee.css
+++ b/EmployeeSkillManagement/wwwroot/css/Employee.css
@@ -17,6 +17,9 @@
 .generate-report {
     transform: translateY(-3px);
 }
+#reportResult{
+    overflow: auto;
+}
 .dt-buttons button.dt-button {
     font-weight: 500;
 }
