--- a/EmployeeSkillManagement/Views/Skill/Index.cshtml
+++ b/EmployeeSkillManagement/Views/Skill/Index.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Skills";
 }
 <div class="d-flex justify-content-between">
-    <h5 class="p-2 col-4 text-uppercase"><i class="bi bi-kanban me-2"></i>Manage Skills</h5>
-    <div class="col-5 col-lg-4">
+    <h5 class="p-2 col-6 col-sm-4 text-uppercase"><i class="bi bi-kanban me-2"></i>Manage Skills</h5>
+    <div class="col-6 col-sm-5 col-lg-4">
         <a asp-controller="Skill" asp-action="Create" class="btn btn-primary  bg-gradient ">
             <i class="bi bi-plus-circle-fill me-2"></i>Create New Skill</a>
     </div>
