--- a/EmployeeSkillManagement/wwwroot/css/site.css
+++ b/EmployeeSkillManagement/wwwroot/css/site.css
@@ -191,20 +191,21 @@ main {
 }
 
 li.nav-item {
-    width: 80%;
-    margin: 20px auto 0;
+    width: 100%;
 }
 
 li.nav-item .nav-link {
     color: #0070ad !important;
     font-weight: 500;
     text-transform: uppercase;
-    border-radius: 4px;
+    border-radius: 0;
     text-align: left;
+    padding: 20px 0 20px 20px!important;
 }
 
 .half-hide li.nav-item .nav-link {
     text-align: center;
+    padding-left: 0!important;
 }
 
 li.nav-item .nav-link:hover,
@@ -294,9 +295,16 @@ canvas#skillPieChart {
         min-height: 100vh;
         width: 25%;
         transition: all 0.5s ease;
+        position: relative;
     }
 
-    .side-navbar-header.half-hide {
+    .side-navbar-header .navbar{
+        width: 25%;
+        position: fixed;
+        transition: all 0.5s ease;
+    }
+
+    .side-navbar-header.half-hide, .side-navbar-header .navbar.half-hide {
         width: 10%;
         transition: all 0.5s ease;
     }
@@ -372,5 +380,16 @@ canvas#skillPieChart {
 
     .logo-name {
         max-width: 50%;
+    }
+
+    li.nav-item {
+        width: 100%;
+    }
+    li.nav-item .nav-link {
+        border-radius: 0;
+        padding-left: 7px;
+    }
+    header.side-navbar-header {
+        border-bottom: 1px solid lightblue;
     }
 }
