--- a/EmployeeSkillManagement/Views/Employee/Upsert.cshtml
+++ b/EmployeeSkillManagement/Views/Employee/Upsert.cshtml
@@ -44,7 +44,7 @@
             ? Model.DateOfJoining.ToString("yyyy-MM-dd")
             : null;
     }
-    <input asp-for="DateOfJoining" class="form-control" type="date" placeholder="Date of joining" value="@dateValue">
+    <input asp-for="DateOfJoining" class="form-control" type="date" placeholder="Date of joining" >
     <small><span asp-validation-for="DateOfJoining" class="text-danger"></span></small>
   </div>
 
@@ -78,7 +78,7 @@
             <div class="col-12 col-sm-3 mb-3">
                 <label class="secondary-label">Add Experience</label>
 
-                <input id="skillYoe" type="number" class="form-control" placeholder="Experience" min=1 @if(Model.EmployeeSkillsAndLevels.Count>0){ <text></text>} else{<text> required</text>}>
+                <input id="skillYoe" type="number" class="form-control" placeholder="Experience" min=0 @if(Model.EmployeeSkillsAndLevels.Count>0){ <text></text>} else{<text> required</text>}>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="isPrimarySkill">
