--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -17,12 +17,12 @@
         <input type="hidden" name="returnUrl" value="@Context.Request.Query["ReturnUrl"]" />
         <div class="form-group">
             <label asp-for="Username"></label>
-            <input asp-for="Username" class="form-control" />
+            <input asp-for="Username" class="form-control" required/>
             <small><span asp-validation-for="Username" class="text-danger"></span></small>
         </div>
         <div class="form-group">
             <label asp-for="Password"></label>
-            <input asp-for="Password" type="password" class="form-control" />
+            <input asp-for="Password" type="password" class="form-control" required/>
             <small><span asp-validation-for="Password" class="text-danger"></span></small>
         </div>
         <button type="submit" class="btn btn-primary w-100">Login</button>
