skill layout updated

--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
               @if(User.Identity!.IsAuthenticated){
                 <footer class=" p-3 ">
                     <div class="container d-flex justify-content-center align-items-center">
-                        &copy; 2023 - Employee Skill Management - Made by Shoaib
+                        &copy; 2023 - Employee Skill Management - Developed by Shoaib
                     </div>
                 </footer>
                 }
