--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 <div class="login-card p-5 bg-white rounded border shadow-sm">
     <div class="left">
         <div class="d-flex align-items-center justify-content-center">
-        <img src="~/Content/Images/capgemini-logo.png" class="logo-name me-2" alt="capgemini">
+        <img src="~/Content/Images/logo.png" class="logo-name me-2" alt="logo">
         <img src="~/Content/Images/cg-logo.png" class="logo-icon" alt="capgemini-logo">
         </div>
 
