--- a/EmployeeSkillManagement/Views/Account/Login.cshtml
+++ b/EmployeeSkillManagement/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     <div class="left">
         <div class="d-flex align-items-center justify-content-center">
         <img src="~/Content/Images/logo.png" class="logo-name me-2" alt="logo">
-        <img src="~/Content/Images/cg-logo.png" class="logo-icon" alt="capgemini-logo">
+        <img src="~/Content/Images/cg-logo.png" class="logo-icon" alt="logo">
         </div>
 
         <div class="logo-text">
