--- a/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeSkillManagement/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light">
                 <div class="container-fluid flex-sm-column p-0">
                     <a class="text-center mt-sm-5 mt-lg-4 mb-sm-4 text-light logo" asp-controller="Home" asp-action="Index">
-                        <img src="~/Content/Images/capgemini-logo.png" class="logo-name mt-3">
+                        <img src="~/Content/Images/logo.png" class="logo-name mt-3">
                         <img src="~/Content/Images/cg-logo.png" class="logo-icon mt-3">
                         </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
